# Copyright 2018 Bitwise IO
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "bond-cli"
version = "0.1.0"
authors = ["Bitwise IO"]

[dependencies]
clap = {version = "2", features = ["yaml"]}
dirs = "1.0"
log = "0.3.8"
serde = "1.0"
serde_derive = "1.0"
simple_logger = "0.4.0"
toml = "0.4"
